--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "bin": {
     "watchbot": "./bin/watchbot.js",
-    "watchbot-log": "./bin/watchbot-log.js"
+    "watchbot-log": "./bin/watchbot-log.js",
+    "watchbot-dead-letter": "./bin/watchbot-dead-letter.js"
   },
   "scripts": {
     "pretest": "npm run lint && npm run validate-templates",
